spade-tests/src/snapshots/spade_tests__typeinference__type_level_ifs_must_be_bool.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    $if 0 {}
    $else {}
}


error: gen if conditions must be #bool, got _
  ┌─ testinput:2:9
  │
2 │     $if 0 {}
  │         ^ Expected #bool
  │
  = note: Expected: #bool
               Got: #number
